Fixed playlist art stretching or distorting

--- a/beautplayer/src/pages/albumpage/AlbumPage.module.scss
+++ b/beautplayer/src/pages/albumpage/AlbumPage.module.scss
@@ -31,6 +31,7 @@
          width: var(--albumArtHeight);
          margin-left: 5rem;
          border-radius: var(--border-radius);
+         object-fit: cover;
 
          @media only screen and (max-width: 540px) {
             position: relative;
